--- a/PubDBApplication/PubDBApplication/Views/ProductsViews/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/ProductsViews/Index.cshtml
@@ -28,7 +28,7 @@
             Alcohol Percentage
         </th>
         <th>
-            Volume
+            Volume in litres
         </th>
         <th></th>
     </tr>
