--- a/PubDBApplication/PubDBApplication/Views/OrderDetailsViews/Delete.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrderDetailsViews/Delete.cshtml
@@ -7,11 +7,60 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this product from order?</h3>
 <div>
-    <h4>OrderDetailsView</h4>
+    <h4>Order Details</h4>
     <hr />
     <dl class="dl-horizontal">
+
+        <dt>
+            ID
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.id)
+        </dd>
+
+        <dt>
+            Order ID
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.order_id)
+        </dd>
+
+        <dt>
+            Product Name
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.product_name)
+        </dd>
+
+        <dt>
+            Price
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.price)
+        </dd>
+
+        <dt>
+            Quantity
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.quantity)
+        </dd>
+
+        <dt>
+            Amount
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.amount)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
