--- a/PubDBApplication/PubDBApplication/Views/ProductsViews/Create.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/ProductsViews/Create.cshtml
@@ -12,19 +12,12 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ProductsView</h4>
+        <h4>Products</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.id, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.id, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.id, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p class="control-label col-md-2"><b>Product Name</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -32,15 +25,15 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.producer_name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p class="control-label col-md-2"><b>Producer Name</b></p>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.producer_name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("producer_name", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.producer_name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.price, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p class="control-label col-md-2"><b>Price</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
@@ -48,7 +41,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.alcohol_percentage, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p class="control-label col-md-2"><b>Alcohol Percentage</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.alcohol_percentage, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.alcohol_percentage, "", new { @class = "text-danger" })
@@ -56,7 +49,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.volume, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p class="control-label col-md-2"><b>Volume in litres</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.volume, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.volume, "", new { @class = "text-danger" })
