--- a/PubDBApplication/PubDBApplication/Views/ProductsViews/Delete.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/ProductsViews/Delete.cshtml
@@ -7,14 +7,63 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
+<h3>Are you sure you want to delete this product?</h3>
 <div>
-    <h4>ProductsView</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            ID
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.id)
+        </dd>
+
+        <dt>
+            Product Name
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.name)
+        </dd>
+
+        <dt>
+            Producer Name
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.producer_name)
+        </dd>
+
+        <dt>
+            Price
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.price)
+        </dd>
+
+        <dt>
+            Alcohol Percentage
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.alcohol_percentage)
+        </dd>
+
+        <dt>
+            Volume in litres
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.volume)
+        </dd>
+
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
