--- a/PubDBApplication/PubDBApplication/Views/ProductsViews/Edit.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/ProductsViews/Edit.cshtml
@@ -16,10 +16,9 @@
         <h4>Products</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p class="control-label col-md-2"><b>Product Name</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
@@ -27,15 +26,15 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.producer_id, "producer_id", htmlAttributes: new { @class = "control-label col-md-2" })
+            <p class="control-label col-md-2"><b>Producer Name</b></p>
             <div class="col-md-10">
-                @Html.DropDownList("producer_id", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.producer_id, "", new { @class = "text-danger" })
+                @Html.DropDownList("producer_name", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.producer_name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.price, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p class="control-label col-md-2"><b>Price</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
@@ -43,7 +42,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.alcohol_percentage, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p class="control-label col-md-2"><b>Alcohol Percentage</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.alcohol_percentage, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.alcohol_percentage, "", new { @class = "text-danger" })
@@ -51,7 +50,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.volume, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p class="control-label col-md-2"><b>Volume in litres</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.volume, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.volume, "", new { @class = "text-danger" })
@@ -64,45 +63,8 @@
             </div>
         </div>
     </div>
-}
 
-
-
-
-
-
-
-
-
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>ProductsView</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.DisplayFor(model => model.id)
-
-        @Html.DisplayFor(model => model.name)
-
-        @Html.DisplayFor(model => model.producer_name)
-
-        @Html.DisplayFor(model => model.price)
-
-        @Html.DisplayFor(model => model.alcohol_percentage)
-
-        @Html.DisplayFor(model => model.volume)
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
+    <div>
+        @Html.ActionLink("Back to List", "Index")
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
