--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
@@ -9,7 +9,8 @@
 
 <p>
     @Html.ActionLink("Create new incoming order", "CreateIncoming") |
-    @Html.ActionLink("Create new outcoming order", "CreateOutcoming")
+    @Html.ActionLink("Create new outcoming order", "CreateOutcoming") |
+    @Html.ActionLink("Collect ", "CreateOutcoming") 
 </p>
 <table class="table">
     <tr><td colspan="7"><h4><b>Warehouse Incoming Orders</b></h4></td></tr>
