--- a/PubDBApplication/PubDBApplication/Views/Producers/Details.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Producers/Details.cshtml
@@ -96,7 +96,7 @@
                 @item.price.ToString("0.00")
             </td>
             <td>
-                @item.alcohol_percentage
+                @item.alcohol_percentage%
             </td>
             <td>
                 @item.volume
