--- a/PubDBApplication/PubDBApplication/Views/Warehouses/Delete.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Warehouses/Delete.cshtml
@@ -7,13 +7,20 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this warehouse?</h3>
 <div>
     <h4>Warehouses</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.name)
+            ID
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.id)
+        </dd>
+        <dt>
+            Warehouse Name
         </dt>
 
         <dd>
