--- a/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
@@ -24,9 +24,10 @@
                     <li>@Html.ActionLink("Producers", "Index", "Producers")</li>
                     <li>@Html.ActionLink("Products", "Index", "ProductsViews")</li>
                     <li>@Html.ActionLink("Pubs", "Index", "Pubs")</li>
-                    <li />
                     <li>@Html.ActionLink("Orders", "Index", "OrdersViews")</li>
                     <li>@Html.ActionLink("Orders Details", "Index", "OrderDetailsViews")</li>
+                    <li>@Html.ActionLink("Warehouses", "Index", "Warehouses")</li>
+                    <li>@Html.ActionLink("Warehouses Details", "Index", "WarehousesStocks")</li>
                 </ul>
             </div>
         </div>
