--- a/PubDBApplication/PubDBApplication/Views/Warehouses/Create.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Warehouses/Create.cshtml
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <p class="control-label col-md-2"><b>Warehouse Name</b></p>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
