optimistic locking + dropdown list available products for incoming order

--- a/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
@@ -35,13 +35,18 @@
     <div class="container body-content">
         @if (ViewBag.Exception == null)
         {
-
+            if (TempData["Exception"] != null)
+            {
+                <h3> <font color="red">DB Server Exception</font></h3>
+                <h5><font color="red">@TempData["Exception"]</font></h5>
+            }
         }
         else
         {
             <h3> <font color="red">DB Server Exception</font></h3>
             <h5><font color="red">@ViewBag.Exception</font></h5>
         }
+
         @RenderBody()
         <hr />
         <footer>
