--- a/PubDBApplication/PubDBApplication/Views/Addresses/Edit.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Addresses/Edit.cshtml
@@ -17,8 +17,6 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.id)
 
-
-
     <div class="form-group">
         <font class="control-label col-md-2"><b>Street</b></font>
 
@@ -52,6 +50,13 @@
         </div>
     </div>
 
+    <div class="form-group">
+        <!--<font class="control-label col-md-2"><b>Row Version</b></font>-->
+        <div class="col-md-10">
+            @Html.HiddenFor(model => model.RowVersion, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.RowVersion, "", new { @class = "text-danger" })
+        </div>
+    </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Save" class="btn btn-default" />
