--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
@@ -162,7 +162,7 @@
             <td>
                 @if (item.status.Equals("In Realization"))
                 {
-                    @Html.ActionLink("Collect", "Home", new { id = item.id })
+                    @Html.ActionLink("Collect", "Collect", new { id = item.id })
                     <font>|</font>
                 }
 
