--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Details.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Details.cshtml
@@ -110,7 +110,7 @@
                 Product
             </th>
             <th>
-                Price
+                Unit Price
             </th>
             <th>
                 Quantity
