--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
@@ -12,7 +12,7 @@
     @Html.ActionLink("Create new outcoming order", "CreateOutcoming") |
 </p>
 <table class="table">
-    <tr><td colspan="7"><h4><b>Warehouse Incoming Orders</b></h4></td></tr>
+    <tr><td colspan="7"><h4><b>Warehouse Incoming Orders</b></h4><h5><b>Orders received from customers</b></h5></td></tr>
     <tr>
         <th>
             ID
@@ -91,7 +91,7 @@
         </tr>
     }
     <tr><td colspan="7"></td></tr>
-    <tr><td colspan="7"><h4><b>Warehouse Outcoming Orders</b></h4></td></tr>
+    <tr><td colspan="7"><h4><b>Warehouse Outcoming Orders</b></h4><h5><b>Orders sent to producers</b></h5></td></tr>
     <tr>
         <th>
             ID
