--- a/PubDBApplication/PubDBApplication/Views/OrderDetailsViews/CreateForProduct.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrderDetailsViews/CreateForProduct.cshtml
@@ -19,11 +19,15 @@
 
     <div class="form-group">
         <p class="control-label col-md-2"><b>Product Name</b></p>
+
         <div class="col-md-10">
             @Html.DropDownList("product_name", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.product_name, "", new { @class = "text-danger" })
+            <p>Only products available in warehouse are displayed</p>
         </div>
+        
     </div>
+
 
     <div class="form-group">
         <p class="control-label col-md-2"><b>Quantity</b></p>
