Revert "Merge branch 'master' of https://github.com/st-wasik/Pub-DB"
This reverts commit f8f19bc8bd14ce74986f14e77b7713a688960190, reversing
changes made to 6246a42f9839b9653830322aecdc5e31a7da56d7.

--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Details.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Details.cshtml
@@ -88,8 +88,6 @@
     @if (Model.status.Equals("In Realization"))
     {
         <h4>This order is in the realization phase.</h4>
-        @Html.ActionLink("Send order", "Index", new { id = Model.id })
-        <font>or</font>
         @Html.ActionLink("Cancel order", "Delete", new { id = Model.id })
     }
 
@@ -112,7 +110,7 @@
                 Product
             </th>
             <th>
-                Unit Price
+                Price
             </th>
             <th>
                 Quantity
