--- a/PubDBApplication/PubDBApplication/Views/Home/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Home/Index.cshtml
@@ -4,9 +4,5 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>PubDB</h2>
-<h4>This system was created to manage the warehouse database</h4>
-<br/>
-<h4>Log in to begin work</h4>
-
+<h2>Index</h2>
 
