--- a/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                     <li>@Html.ActionLink("Orders Details", "Index", "OrderDetailsViews")</li>
                     <li>@Html.ActionLink("Warehouses", "Index", "Warehouses")</li>
                     <li>@Html.ActionLink("Warehouses Details", "Index", "WarehousesStocks")</li>
+                    <li>@Html.ActionLink("Raports", "Details", "Raports")</li>
                 </ul>
             </div>
         </div>
