--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
@@ -9,7 +9,7 @@
 
 <p>
     @Html.ActionLink("Create new incoming order", "CreateIncoming") |
-    @Html.ActionLink("Create new outcoming order", "CreateOutcoming") |
+    @Html.ActionLink("Create new outcoming order", "CreateOutcoming")
 </p>
 <table class="table">
     <tr><td colspan="7"><h4><b>Warehouse Incoming Orders</b></h4></td></tr>
@@ -81,7 +81,6 @@
             </td>
 
             <td>
-<<<<<<< HEAD
                 @if (item.status.Equals("In Creation"))
                 {
 
@@ -96,8 +95,7 @@
 
                    // <font>&nbsp;&nbsp;&nbsp;|</font>
                 }
-=======
->>>>>>> b91780d929e943775237fddde002965440153156
+
                 @Html.ActionLink("Details", "Details", new { id = item.id })
                 @if (!item.status.Equals("Completed"))
                 {
@@ -179,13 +177,8 @@
             <td>
                 @if (item.status.Equals("In Realization"))
                 {
-<<<<<<< HEAD
                   //  @Html.ActionLink("Collect", "Collect", new { id = item.id })
                     //<font>|</font>
-=======
-                    @Html.ActionLink("Collect", "Home", new { id = item.id })
-                    <font>|</font>
->>>>>>> b91780d929e943775237fddde002965440153156
                 }
 
                 @Html.ActionLink("Details", "Details", new { id = item.id })
