--- a/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                     <li>@Html.ActionLink("Warehouses", "Index", "Warehouses")</li>
                     <li>@Html.ActionLink("Warehouses Details", "Index", "WarehousesStocks")</li>
                     <li>@Html.ActionLink("Raports", "Details", "Raports")</li>
+                    <li>@Html.ActionLink("Archive", "Index", "OrdersArchive")</li>
                 </ul>
             </div>
         </div>
