--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
@@ -84,16 +84,16 @@
                 @if (item.status.Equals("In Creation"))
                 {
 
-                   // @Html.ActionLink("Submit", "Submit", new { id = item.id })
+                    // @Html.ActionLink("Submit", "Submit", new { id = item.id })
 
-                  //  <font>|</font>
+                    //  <font>|</font>
                 }
                 @if (item.status.Equals("In Realization"))
                 {
 
                     //@Html.ActionLink("Send", "Send", new { id = item.id })
 
-                   // <font>&nbsp;&nbsp;&nbsp;|</font>
+                    // <font>&nbsp;&nbsp;&nbsp;|</font>
                 }
 
                 @Html.ActionLink("Details", "Details", new { id = item.id })
@@ -177,7 +177,7 @@
             <td>
                 @if (item.status.Equals("In Realization"))
                 {
-                  //  @Html.ActionLink("Collect", "Collect", new { id = item.id })
+                    //  @Html.ActionLink("Collect", "Collect", new { id = item.id })
                     //<font>|</font>
                 }
 
@@ -193,3 +193,137 @@
     }
 
 </table>
+
+@{
+    <h3>Sale statistics</h3>
+    <h4>Raport based only on completed orders</h4>
+    <table class="table">
+        <tr>
+            <th>
+                Order amounts:
+            </th>
+            <th>
+                Min
+            </th>
+            <th>
+                Avg per cust.
+            </th>
+            <th>
+                Max
+            </th>
+            <th>
+                Sum
+            </th>
+            <th>
+                Served customers
+            </th>
+            <th>
+                Sold products
+            </th>
+            <th>
+                Most popular product
+            </th>
+        </tr>
+
+        @using (var db = new PubDBApplication.Models.PubDBEntities())
+        {
+            var q = (from x in db.getSaleStatistics(7) select x).ToList();
+
+
+            for (int i = 0; i < q.Count(); i++)
+            {
+        <tr>
+            <td><b>Last week</b></td>
+            <td>
+                @q[i].minOrderAmount.ToString("0.00")
+            </td>
+
+            <td>
+                @q[i].avgOrderAmount.ToString("0.00")
+            </td>
+            <td>
+                @q[i].maxOrderAmount.ToString("0.00")
+            </td>
+            <td>
+                @q[i].sumOrderAmount.ToString("0.00")
+            </td>
+            <td>
+                @q[i].servedCustomers
+            </td>
+            <td>
+                @q[i].totalSoldQuantity
+            </td>
+            <td>
+                @q[i].mostPopularProduct
+            </td>
+        </tr>
+            }
+        }
+        @using (var db = new PubDBApplication.Models.PubDBEntities())
+        {
+            var q = (from x in db.getSaleStatistics(30) select x).ToList();
+
+
+            for (int i = 0; i < q.Count(); i++)
+            {
+                <tr>
+                    <td><b>Last month</b></td>
+                    <td>
+                        @q[i].minOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].maxOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].avgOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].sumOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].servedCustomers
+                    </td>
+                    <td>
+                        @q[i].totalSoldQuantity
+                    </td>
+                    <td>
+                        @q[i].mostPopularProduct
+                    </td>
+                </tr>
+            }
+        }
+        @using (var db = new PubDBApplication.Models.PubDBEntities())
+        {
+            var q = (from x in db.getSaleStatistics(90) select x).ToList();
+
+
+            for (int i = 0; i < q.Count(); i++)
+            {
+                <tr>
+                    <td><b>Last quarter</b></td>
+                    <td>
+                        @q[i].minOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].maxOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].avgOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].sumOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].servedCustomers
+                    </td>
+                    <td>
+                        @q[i].totalSoldQuantity
+                    </td>
+                    <td>
+                        @q[i].mostPopularProduct
+                    </td>
+                </tr>
+            }
+        }
+    </table>
+}
