--- a/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/OrdersViews/Index.cshtml
@@ -6,13 +6,17 @@
 }
 
 <h2>Orders</h2>
+<p>
+   @Html.ActionLink("See Orders Details", "Index", "OrderDetailsViews")
+</p>
+
 
 <p>
     @Html.ActionLink("Create new incoming order", "CreateIncoming") |
     @Html.ActionLink("Create new outcoming order", "CreateOutcoming")
 </p>
 <table class="table">
-    <tr><td colspan="7"><h4><b>Warehouse Incoming Orders</b></h4></td></tr>
+    <tr><td colspan="7"><h4><b>Warehouse Incoming Orders (from Customers)</b></h4></td></tr>
     <tr>
         <th>
             ID
@@ -106,7 +110,7 @@
         </tr>
     }
     <tr><td colspan="7"></td></tr>
-    <tr><td colspan="7"><h4><b>Warehouse Outcoming Orders</b></h4></td></tr>
+    <tr><td colspan="7"><h4><b>Warehouse Outcoming Orders (to Producers)</b></h4></td></tr>
     <tr>
         <th>
             ID
@@ -232,31 +236,31 @@
 
             for (int i = 0; i < q.Count(); i++)
             {
-        <tr>
-            <td><b>Last week</b></td>
-            <td>
-                @q[i].minOrderAmount.ToString("0.00")
-            </td>
+                <tr>
+                    <td><b>Last week</b></td>
+                    <td>
+                        @q[i].minOrderAmount.ToString("0.00")
+                    </td>
 
-            <td>
-                @q[i].avgOrderAmount.ToString("0.00")
-            </td>
-            <td>
-                @q[i].maxOrderAmount.ToString("0.00")
-            </td>
-            <td>
-                @q[i].sumOrderAmount.ToString("0.00")
-            </td>
-            <td>
-                @q[i].servedCustomers
-            </td>
-            <td>
-                @q[i].totalSoldQuantity
-            </td>
-            <td>
-                @q[i].mostPopularProduct
-            </td>
-        </tr>
+                    <td>
+                        @q[i].avgOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].maxOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].sumOrderAmount.ToString("0.00")
+                    </td>
+                    <td>
+                        @q[i].servedCustomers
+                    </td>
+                    <td>
+                        @q[i].totalSoldQuantity
+                    </td>
+                    <td>
+                        @q[i].mostPopularProduct
+                    </td>
+                </tr>
             }
         }
         @using (var db = new PubDBApplication.Models.PubDBEntities())
