--- a/PubDBApplication/PubDBApplication/Views/Warehouses/Index.cshtml
+++ b/PubDBApplication/PubDBApplication/Views/Warehouses/Index.cshtml
@@ -6,7 +6,9 @@
 }
 
 <h2>Warehouses</h2>
-
+<p>
+    @Html.ActionLink("See Warehouses Details", "Index", "WarehousesStocks")
+</p>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -21,20 +23,21 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-            @Html.ActionLink("Details", "Details", new { id = item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.name)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.id })
+            </td>
+        </tr>
+    }
 
 </table>
